--- a/src/app/components/home-hero/home-hero.component.css
+++ b/src/app/components/home-hero/home-hero.component.css
@@ -1,7 +1,7 @@
 .home-hero-container {
   background-color: #3f51b5;
   /* padding-top to allow content to be seen from fixed navbar */
-  padding-top: 200px;
+  padding-top: 100px;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
